# livekit-msteams-bridge-py

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/agents/: README.md  pyproject.toml  requirements.txt  worker.py
examples/basic-bridge/: .env.example  README.md  main.py
examples/video-agent/: .env.example  Dockerfile  README.md  pyproject.toml
examples/voice-agent/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  worker.py
src/livekit_msteams_bridge/: __init__.py  cli.py  config.py  hmac_auth.py  livekit_room.py  log.py  metrics.py  protocol.py  server.py  session.py  video_relay.py
tests/: conftest.py  test_config.py  test_dotenv.py  test_hmac.py  test_livekit_sdk_surface.py  test_protocol.py  test_server_auth.py  test_server_integration.py  test_session.py  test_video_relay.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: agents-and-dispatch.md  architecture.md  configuration-reference.md  connecting-to-standin.md  contributing.md  example.md  getting-started.md  governors-and-privacy.md  index.mdx  library-api.md  troubleshooting.md  wire-protocol.md
